tests/baselines/reference/importDeferInvalidNamed.errors.txt
b.ts(1,8): error TS18059: Named imports are not allowed in a deferred import.
b.ts(1,27): error TS2307: Cannot find module 'a' or its corresponding type declarations.


==== a.ts (0 errors) ====
    export function foo() {
        console.log("foo from a");
    }
    
==== b.ts (2 errors) ====
    import defer { foo } from "a";
           ~~~~~~~~~~~~~
!!! error TS18059: Named imports are not allowed in a deferred import.
                              ~~~
!!! error TS2307: Cannot find module 'a' or its corresponding type declarations.
    
    foo();